# altinn-model-publisher

./: .flake8  Dockerfile  README.md  altinn-model-publisher.yaml  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: deploy-demo.yaml  deploy-prod.yaml  deploy-staging.yaml
mock_mappings/mappings/: api_metadata-4c753605-ab86-468b-b185-f8f81950fcca.json  api_metadata_formtask_2365_6-79ec7c90-28e2-4cbb-827c-bafee2b6ec24.json  api_metadata_formtask_2365_6_forms_3442_45350_xsd-8a9b1a07-ac81-49e7-9a3e-59fb9c4e5d15.json  api_metadata_formtask_3314_1212-19adb6e6-23cd-4089-9d6a-e3b7c4081508.json  api_metadata_formtask_3314_1212_forms_245_10980_xsd-85048caf-54b4-4f89-87bd-1186d162d91e.json  api_metadata_formtask_3357_130429-f286fb98-d497-4182-bdd1-d944cc7eaea7.json  api_metadata_formtask_3357_130429_forms_4166_35895_xsd-37a775c5-9e3d-4e59-ac02-08b4e17f7609.json  api_metadata_formtask_3736_170607-b49ea7e3-bd77-4447-885d-50f9f38cf13f.json  api_metadata_formtask_3736_170607_forms_4685_1706091129_xsd-7439a7f3-8aae-4fa5-9e88-6a110f8fe362.json  api_metadata_formtask_3743_140516-56824e1c-e8e8-4a9a-bb75-e0d9eed654a7.json  api_metadata_formtask_3743_140516_forms_4444_32407_xsd-4b9e34eb-ae80-4849-bb17-391617277359.json  api_metadata_formtask_3814_140602-d9cb9d21-4b3c-4045-a98b-e53794f265ca.json  api_metadata_formtask_3814_140602_forms_4445_32408_xsd-4cdfcf83-65d4-4dd6-a427-2a0f796b3e84.json  api_metadata_formtask_3906_141205-d9c43969-6379-4a39-8ada-cf40b91a7461.json  api_metadata_formtask_3906_141205_forms_3940_20161021_xsd-5b7dcc14-d16d-43f3-aa08-981006d89fb4.json  api_metadata_formtask_4711_1-3fdc21c1-1fc1-401e-990c-bad2ac60cab5.json  api_metadata_formtask_4711_1_forms_5466_41779_xsd-df1a2404-f53c-44b9-be2d-dc12236bb49b.json  api_metadata_formtask_4942_2017-51ac12c3-7ef6-4e6f-94b2-917a3417187b.json  api_metadata_formtask_4942_2017_forms_sofus_17091115_xsd-1d3f2932-b5de-47b0-b08c-3923b695ab4c.json
src/altinn_model_publisher/: __init__.py  app.py  gunicorn_config.py
src/altinn_model_publisher/config/: config.py
src/altinn_model_publisher/mapper/: __init__.py  mapper_utils.py  model_mapper.py  or_mapper.py  seres_mapper.py
src/altinn_model_publisher/organizations/: __init__.py  organizations.py  shortname_orgs.py
src/altinn_model_publisher/resources/: catalogs.py  models.py  ping.py  ready.py  update.py
src/altinn_model_publisher/security/: __init__.py  auth.py
src/altinn_model_publisher/service/: altinn_cache_service.py  altinn_client.py  altinn_endpoints.py  altinn_file_service.py  altinn_model_mapper.py  altinn_mongo_service.py  altinn_service.py
tests/: __init__.py  conftest.py  test_data.py
tests/contract/: __init__.py  test_catalogs.py  test_models.py
tests/integration/: __init__.py  test_catalogs.py  test_factory.py  test_models.py  test_ping.py  test_ready.py  test_update.py
tests/test_data/: __init__.py  altinn_catalog.py  or_catalog.py  seres_catalog.py
tests/unit/: __init__.py  test_client.py  test_endpoints.py  test_model_mapper.py  test_mongo_service.py  test_ready.py  test_service_filters.py  test_startup_tasks.py
