[tool.poetry]
name = "altinn-model-publisher"
version = "0.1.0"
description = "Transforms Altinn 2.0 models (seres) to modelldcat-ap-no compliant models and expose the collection"
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/altinn-model-publisher"
repository = "https://github.com/Informasjonsforvaltning/altinn-model-publisher"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"
requests = "^2.24.0"
xmlschema = "^1.3.1"
modelldcatnotordf = "^0.0.12"
datacatalogtordf = "^1.2.0"
aiohttp = "^3.7.3"
aiocache = {extras = ["redis"], version = "^0.11.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-dotenv = "^0.5.2"
pytest-docker = "^0.10.1"
pytest-cov = "^2.10.1"
docker-compose = "^1.27.4"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.11.1"
safety = "^1.9.0"
mypy = "^0.790"
flake8-annotations = "^2.4.1"
codecov = "^2.1.10"
requests-mock = "^1.8.0"
pytest-mock = "^3.3.1"
rdflib = "^5.0.0"
pytest-aiohttp = "^0.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["altinn_model_publisher"]
omit = ["*__init__.py", "*gunicorn_config.py", "*altinn_file_service.py", "*altinn_cache_service.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
